--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --watch",
+    "dev": "webpack --progress",
     "prod": "cross-env NODE_ENV=production webpack --progress",
     "start": "webpack-dev-server -d --hot --config webpack.config.js --watch"
   },
